Adding git details.

--- a/dummy.yml
+++ b/dummy.yml
@@ -1,29 +1,81 @@
 ---
 
-image_resource:
-  type: docker-image
-  source: {repository: ubuntu}
-
 resources:
 
-  - name: dummy_repo_a
-    type: git
-    source:
-      uri: https://github.com/danieljamesrees/dummy_repo_a
+    - name: dummy_repo_a
+      type: git
+      source:
+          branch: master
+          password: ((git_password))
+          uri: https://github.com/danieljamesrees/dummy_repo_a
+          username: danieljamesrees
+
+#    - name: dummy_repo_b
+#      type: git
+#      source:
+#          uri: https://github.com/danieljamesrees/dummy_repo_a
 
 jobs:
 
+    - name: no_trigger
+      plan:
+          - get: dummy_repo_a
+          - task: echo
+            config:
+                platform: linux
+                image_resource:
+                    type: docker-image
+                    source: {repository: busybox}
+                inputs:
+                inputs:
+                    - name: dummy_repo_a
+                run:
+                    path: sh
+                    args: 
+                        - -exc
+                        - |
+                            echo "dummy_repo_a should not have been triggered"
+
     - name: manual_trigger
       plan:
-        - get: dummy_repo_a
-        - task: echo
-          config:
-            platform: linux
-            inputs:
-              - name: dummy_repo_a
-            run:
-              path: sh
-              args: 
-                - -exc
-                - |
-                  echo "dummy_repo_a was manually triggered"
+          - get: dummy_repo_a
+          - task: echo
+            config:
+                platform: linux
+                image_resource:
+                    type: docker-image
+                    source: {repository: busybox}
+                inputs:
+                    - name: dummy_repo_a
+                run:
+                    path: sh
+                    args: 
+                        - -exc
+                        - |
+                            echo "dummy_repo_a was manually triggered"
+                            echo "manual_trigger running at " >> README.md
+                            date -I >> README.md
+                            exit ((return_code))
+            ensure:
+                put: dummy_repo_a
+                params:
+                    repository: dummy_repo_a
+
+    - name: no_put_trigger
+      plan:
+          - get: dummy_repo_a
+          - task: echo
+            config:
+                platform: linux
+                image_resource:
+                    type: docker-image
+                    source: {repository: busybox}
+                inputs:
+                inputs:
+                    - name: dummy_repo_a
+                run:
+                    path: sh
+                    args: 
+                        - -exc
+                        - |
+                            echo "dummy_repo_a should not have been triggered by the previous put"
