--- a/dummy.yml
+++ b/dummy.yml
@@ -1,7 +1,5 @@
 ---
 
-#Check why I need to git add, then git commit to push - compare with Darren's
-
 resources:
 
     - name: dummy_repo_a
@@ -111,7 +109,7 @@ jobs:
                   args:
                       - -exc
                       - |
-                          echo "dummy_repo_a was meant to be triggered by a git push in a put, even when the preceding task was terminated with return code ((return_code)), but not when triggered by a push outside of the pipeline"
+                          echo "dummy_repo_a was meant to be triggered by a git push in a put, even when the preceding task was terminated with return code ((return_code)), and also in the middle of the pipeline when triggered by a push outside of the pipeline"
 
     - name: passed_trigger
       plan:
@@ -122,7 +120,7 @@ jobs:
                 platform: linux
                 image_resource:
                     type: docker-image
-                    source: {repository: busybox}
+                    source: {repository: ubuntu}
                 inputs:
                 inputs:
                     - name: dummy_repo_a
